# dgm-sdk

./: .gitignore  CMakeLists.txt  README.md  Readme-release.md  bootstrap.bat  changelog.txt  make-release.bat
.github/workflows/: build.yml  main.yml  packaging.yml
cmake/: cpp.cmake  dependencies.cmake  utils.cmake  version.cmake
doxygen/: CMakeLists.txt
examples/: CMakeLists.txt  Readme.md  ResourceDir.hpp  ResourceDir.hpp.in
examples/cmake/: dependencies.cmake  utils.cmake
examples/example-app/: CMakeLists.txt  Main.cpp
examples/example-controller/: CMakeLists.txt  Main.cpp
examples/example-math/: CMakeLists.txt  Main.cpp
examples/example-particle-effects/: CMakeLists.txt  EffectBloodSpatter.hpp  EffectStarfield.hpp  EffectTexturedSmoke.hpp  EffectWaterFountain.hpp  Main.cpp  ParticleEffectBase.hpp
examples/example-pathfind/: CMakeLists.txt  Level.hpp  Main.cpp
examples/example-simple-ai/: Actor.cpp  Actor.hpp  AiPrimitives.hpp  Blackboard.hpp  CMakeLists.txt  ControllerInterface.hpp  Main.cpp  NpcBrain.cpp  NpcBrain.hpp  NpcController.hpp  PhysicalController.hpp  Scene.hpp
examples/example-spatial-buffer/: CMakeLists.txt  Main.cpp
examples/example-tileset/: CMakeLists.txt  Level.hpp  Main.cpp
examples/resources/: soldier_config.json  sources.txt
examples/shared/: CMakeLists.txt  DemoData.cpp  DemoData.hpp  Level.cpp  Level.hpp
level-editor/: CMakeLists.txt
project-template/: CMakeLists.txt  Readme.md
project-template/cmake/: dependencies.cmake  settings.cmake
project-template/lib/: CMakeLists.txt
project-template/lib-events/: CMakeLists.txt
project-template/lib-events/include/: EventQueue.hpp
project-template/lib-gamerules-engine/: CMakeLists.txt
project-template/lib-gamerules-engine/src/: GameRulesEngine.cpp
project-template/lib/app/: AppStateBootstrap.cpp  AppStateBootstrap.hpp  AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.cpp  AppStateMainMenu.hpp  AppStateMenuOptions.cpp  AppStateMenuOptions.hpp  AppStatePaused.cpp  AppStatePaused.hpp  AppStateResourceLoader.cpp  AppStateResourceLoader.hpp  AppStateShell.cpp  AppStateShell.hpp  GuiBuilder.cpp  GuiBuilder.hpp  GuiState.cpp  GuiState.hpp
project-template/lib/benchmarks/: CMakeLists.txt
project-template/lib/core/: AudioPlayer.cpp  Settings.cpp  Settings.hpp  Settings.hpp.in
project-template/lib/events/: EventProcessor.hpp  EventQueue.hpp  Events.cpp  Events.hpp
project-template/lib/game/: EntityTable.hpp  FpsCounter.cpp  Game.cpp  Game.hpp  Renderer.cpp
project-template/lib/src/app/: AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.hpp  AppStateMenuOptions.hpp  AppStatePaused.hpp  AppStateResourceLoader.cpp  GuiBuilder.cpp  GuiState.cpp
project-template/lib/src/core/: AudioPlayer.hpp
project-template/lib/src/events/: EventProcessor.cpp  EventProcessor.hpp  EventQueue.hpp  Events.hpp
project-template/lib/src/game/: EntityTable.hpp  Game.cpp  Renderer.hpp
project-template/lib/tests/: CMakeLists.txt
project-template/resources/: app.ini
project-template/resources/graphics/configs/: sample_config.json
project-template/src/lib-app/: CMakeLists.txt
project-template/src/lib-app/include/app/: AppStateIngame.hpp  AppStateMainMenu.hpp  AppStateMenuOptions.hpp  AppStatePaused.hpp  AppStateResourceLoader.hpp  GuiBuilder.hpp  GuiState.hpp  GuiWrapper.hpp
project-template/src/lib-app/src/app/: AppStateIngame.cpp  AppStateMainMenu.cpp  AppStateMenuOptions.cpp  AppStatePaused.cpp  AppStateResourceLoader.cpp  GuiBuilder.cpp  GuiState.cpp
project-template/src/lib-app/src/core/: AudioPlayer.cpp
project-template/src/lib-app/src/game/: FpsCounter.cpp
project-template/src/lib-engines/: CMakeLists.txt
project-template/src/lib-engines/include/: AudioEngine.hpp
project-template/src/lib-engines/include/audio/: AudioPlayer.hpp
project-template/src/lib-engines/include/engine/: AudioEngine.hpp  GameRulesEngine.hpp  PhysicsEngine.hpp  RenderingEngine.hpp
project-template/src/lib-engines/include/render/: RenderContext.hpp
project-template/src/lib-engines/src/: AudioEngine.cpp  PhysicsEngine.cpp  RenderingEngine.cpp
project-template/src/lib-engines/src/audio/: AudioPlayer.cpp
project-template/src/lib-engines/src/engine/: AudioEngine.cpp  GameRulesEngine.cpp  PhysicsEngine.cpp  RenderingEngine.cpp
project-template/src/lib-events/: CMakeLists.txt
project-template/src/lib-events/include/: RenderingEvents.hpp
project-template/src/lib-game/: CMakeLists.txt
project-template/src/lib-game/include/: Scene.hpp
project-template/src/lib-game/include/core/: Scene.hpp
project-template/src/lib-game/include/engine/: AudioEngine.hpp  GameRulesEngine.hpp  PhysicsEngine.hpp  RenderingEngine.hpp
project-template/src/lib-game/include/events/: EventQueue.hpp  RenderingEvents.hpp
project-template/src/lib-game/include/render/: RenderContext.cpp  RenderContext.hpp
project-template/src/lib-game/include/utils/: Builder.hpp  Multiqueue.hpp
project-template/src/lib-game/src/core/: Scene.cpp
project-template/src/lib-game/src/engine/: GameRulesEngine.cpp  PhysicsEngine.cpp  RenderingEngine.cpp
project-template/src/lib-game/src/render/: RenderContext.cpp
project-template/src/lib-game/src/utils/: Builder.cpp
project-template/src/lib-loading/: CMakeLists.txt
project-template/src/lib-loading/include/: ResourceLoader.hpp  SceneLoader.hpp
project-template/src/lib-loading/src/: ResourceLoader.cpp  SceneLoader.cpp
project-template/src/lib-settings/: CMakeLists.txt
project-template/src/lib-settings/include/: CmdSettings.hpp  Settings.hpp
project-template/src/tests/src/: EventQueueTest.cpp  FpsCounterTest.cpp  MultiqueueTest.cpp
